--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -390,72 +390,69 @@ we can see green histograms after the process of scaling and soft blue histogram
 
 This seems a good result starting from our data: in fact, they grafically appear normally distributed around 0.
 
-### CONNECTION 1 PIP2->PKC # male *2 ( perchè il missed lo azzeccano?)
+### CONNECTION 1 PIP2->PKC # pareggio
 
- We fixed a level alpha=0.05 so that we have $log(\frac{1}{\alpha})\simeq 1.30$. 
+ We fixed a level alpha=0.05 so that we have $log(\frac{1}{\alpha})\simeq1.30$.
  The following table summarize our results.
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       0.0349             -11.13            -10.02
-0.1        0.0349             -11.13            -10.02
-1          0.0349             -11.13            -10.02
-10         0.0349             -11.13            -10.02
-100        0.0349             -12.04            -10.84
+0.01          1                   -16.19            -15.48,
+0.1           1                   -16.19            -15.48,
+1             0.21                -18.48            -14.64
+10            0.21                -18.48            -14.64
+100           0.21                -18.48            -14.64
 ---------  --------------   ---------------- ----------------
 
-We can see that there aren't many variations as the parameter k varies as first result.
-But let's analyze our results: in this specific case ( we fixed an alpha level and a specific dataset where there is a perturbation on PKC ), MLE_dag rejected  the null hypothesis correctly while we cannot reject the null hypothesis.
+They did not reject  the null hypothesis and we can confirm that it is a missed linkage.Similarly, our test was not able to reject the null hypothesis. The sparsity parameter K did not have a strong impact on the results
 
-### SECOND CONNECTION: PKC->Jnk  # C'é #bene
+### SECOND CONNECTION: PKC->Jnk  # C'é  #male
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       5.21e-10            20.38              19.69
-0.1        5.21e-10            22.7               22.01
-1          5.21e-10            22.7               22.01
-10         5.21e-10            22.7               22.01
-100        6.07e-10            23.27              22.57
+0.01       1                  -16.19            -15.48
+0.1        1                  -16.19            -15.48
+1          6.0e-11            17.05              16.36
+10         6.0e-11            17.05              16.36
+100        6.0e-11            17.05              16.36
 ---------  --------------   ---------------- ----------------
 
-Also in this example, the k parameter did influenced in a strong way the result.
-MLE_dag rejected correctly the null hypothesis and so did we.
+In this case, we need to notice the strong influence of k parameter on the results: we can not say a priopri when we reject or accept the null hyphothesis and an image should help to understand the behaviour of our statistics when the k parameter changes.
+Our tests seem to have similar results as MLEdag
 
-### THIRD  CONNECTION: PKC->PIP3 # Non c'è #bene
+![statistiche](data/statistics_images/Part5.2.png)
+
+### THIRD  CONNECTION: PKC->PIP3 # Non c'è #bene*2
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       0.65               -12.61              -11.80
-0.1        0.65               -12.61              -11.80
-1          0.65               -12.61              -11.80
-10         0.65               -12.61              -11.80
-100        0.64               -13.99              -13.09
+0.01       1                  -16.19              -15.48
+0.1        0.60               -15.80              -14.80
+1          0.60               -15.80              -14.80
+10         0.60               -15.80              -14.80
+100        0.60               -15.80              -14.80
 ---------  --------------   ---------------- ----------------
 
-In this case, MLE_dag accepted the null hypothesis correctly and we did the same.
-In addition, this is the only situation in which we found a sufficient deviation in our statistics 
-and it should be interesting to see it grafically.
+In this case the test are equivalent: MLEdag accept correctly the null hypothesis and we did the same.
+The k parameter did not have a central role in this test with a exception of k=0.01 in which MLE_dag as a p-value=1
 
-
-#PATHWAY LINKAGE: PKC->(RAF;MEK,ERK) #male
+#PATHWAY LINKAGE: PKC->(RAF;MEK,ERK) #male*2
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       2.9e-96            -71.65              -55.68
-0.1        2.9e-96            -71.65              -55.68
-1          2.9e-96            -71.65              -55.68
-10         2.9e-96            -71.65              -55.68
-100        6.2e-100           -71.65              -55.68
+0.01       0.82               -71.56              -56.09
+0.1        0.82               -71.56              -56.09
+1          1.62e-106          -71.56              -56.09
+10         1.62e-106          -71.56              -56.09
+100        1.62e-106          -71.56              -56.09
 ---------  --------------   ---------------- ----------------
 
-MLE_dag method reject the null hypothesis correctly while we cannot reject the null hypothesis.
+This is a interesting simulation: our statistics log(Un) and log(Wn) had a stable result as the k parameter changed. On the other hand MLE_dag produce contrasting pvalues. Also in this situation an image should help to understand the fluctuation.
 
-
-Summing up, MLE_dag has a good performance on this dataset while we have some difficulties in rejecting the null hypothesis.
-
+As a final remark, we need to notice that we have used a dataset in which there was a perturbation on PKC that should be responsible of these results. Consequently, we need to pay attention to the conclusion based on the whole dataset: will the results be the same?
 ## POINT 6
 Now let's move on the entire dataset obtained concatenating all the data.
-As before, we can visually check our zero-mean Gaussian aasumption.
+As before, we can visually check our zero-mean Gaussian aasumptions.
 
 This is our starting point 
 ![grafici](data/distribution_plots/original/concatenated.png)
@@ -467,57 +464,65 @@ It's interesting to compare the results of our test on a different dataset in wh
 We fixed a level alpha=0.05 so that we have $ log(\frac{1}{\alpha})\simeq1.30 $.
 The following table summarize our results.
  
-### CONNECTION 1 PIP2->PKC # male *2
+### CONNECTION 1 PIP2->PKC # pareggio
 
  We fixed a level alpha=0.05 so that we have $log(\frac{1}{\alpha})\simeq1.30$.
  The following table summarize our results.
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01          1.67e-113           -883               -Inf
-0.1           1.67e-113           -883               -Inf
-1             1.67e-113           -883               -Inf
-10            1.67e-113           -883               -Inf
-100           1.67e-113           -883               -Inf
+0.01          1                   -625.26           -534.54
+0.1           1                   -625.26           -534.54
+1             1                   -466.80           -407.60
+10            1                   -466.80           -407.60
+100           1                   -625.26           -534.54
 ---------  --------------   ---------------- ----------------
 
-They reject correctly the null hypothesis ( but they said it was a missed link even if the take it correctly all the times) while we can not reject the null hypothesis
+They did not reject  the null hypothesis but we had the same results.
 
 ### SECOND CONNECTION: PKC->Jnk  # C'é  #male
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       0                  -466.16            -466.86
-0.1        0                  -466.16            -466.86
-1          0                  -466.16            -466.86
-10         0                  -466.16            -466.86
-100        0                  -751.49            -Inf
+0.01       0                  -297.12           -297.81
+0.1        0                  -297.12           -297.81
+1          0                   36.50             35.81
+10         0                  -297.12           -297.81
+100        0                  -297.12           -297.81
 ---------  --------------   ---------------- ----------------
 
-They reject the null hypothesis (correctly) and we did not reject the null hypothesis
+In this case, we need to notice the strong influence of k parameter on our statistics as in point five: we ended up with  a wrong conclusion in all the case expect for k=1. 
 
 ### THIRD  CONNECTION: PKC->PIP3 # Non c'è #bene*2
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       3.37e-30           -1342.46            -Inf
-0.1        3.37e-30           -1342.46            -Inf
-1          3.37e-30           -1342.46            -Inf
-10         3.37e-30           -1342.46            -Inf
-100        1.81e-29           -1679.78            -Inf
+0.01       1                  -625.26             -534.54
+0.1        1                  -625.26             -534.54
+1          1                  -466.80             -407.60
+10         0.84               -585.54             -504.55
+100        1                  -625.26             -534.54
 ---------  --------------   ---------------- ----------------
 
-They reject the null hypothesis (uncorrect), while we correctly accept the null hypothesis
+In this case the test are equivalent: MLEdag accept correctly the null hypothesis and we did the same.
+The k parameter did not have a central role in this test with a exception of k=1 and k=10
 
-#PATHWAY LINKAGE: PKC->(RAF;MEK,ERK) #male*2
+#PATHWAY LINKAGE: PKC->(RAF;MEK,ERK) 
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
 --------   --------------   ---------------- ----------------
-0.01       0                  -1115.38            -Inf
-0.1        0                  -1115.38            -Inf
-1          0                  -1115.38            -Inf
-10         0                  -1115.38            -Inf
-100        0                  -1115.38            -Inf
+0.01       1                  -924.26             -Inf
+0.1        1                  -924.26             -Inf
+1          0                  -924.26             -Inf
+10         0                  -924.26             -Inf
+100        0                  -924.26             -Inf
 ---------  --------------   ---------------- ----------------
 
-They reject the null hypothesis (correctly) but we can not reject the null hypothesis
+This is a interesting simulation: our statistics log(Un) and log(Wn) had a stable result as the k parameter changed. On the other hand MLE_dag produce contrasting pvalues. Also in this situation an image should help to understand the fluctuation.
+
+
+#CONCLUSIONI
+
+### DOMANDE
+
+
