--- a/knitprova.Rmd
+++ b/knitprova.Rmd
@@ -32,8 +32,8 @@ In order to do this we can use the log likelihood that's defined as follows:
 Let's enroll it:
 We have three sums that are, going from the inner to the outer:
 
-* *inner*: $\sum_{k \in [1,p] \setminus j} \mathbb{A}[j,k]\cdot \mathbb{X}[i,k]$ where we are computing the dot product from the weight that has the eventual edge that goes from $k$ to $j$ (scalar) and the value of the k-th random variable ($X_k$) in the i-th sample, and then summing all these values. This can be seen as a kind of weighted sum of the i-th sample where the weights are the influences that all the other random variables have over the k-th one, and as such it can be seen as a "how much j is influenced by the other variables in the sample $i$"
-* *middle*: $\sum_{i=1}^n \left( \mathbb{X}[i,j] - \text{inner}\right )^2$ where for each of the i-th observation of the j-th random variable, we subtract the sum obtained in the inner that is a scalar, then summing all these values. We are subtracting the value of the j-th random variable in the sample i with the influence that the other random variables have had on $j$, so we can interpret it as 'how much j is distant from the value that should have accordingly with the other variables', then we compute the square of this difference. It can be interpreted as the euclidean distance from the vector of the n samples of j and the vector of the influences of all the other variables (the value that should have) over j.
+* *inner*: $\sum_{k \in [1,p] \setminus j} \mathbb{A}[j,k]\cdot \mathbb{X}[i,k]$ where we are computing the dot product from the weight that has the eventual edge that goes from $k$ to $j$ (scalar) and the value of the j-th random variable ($X_k$) in the i-th sample, and then summing all these values. This can be seen as a kind of weighted sum of the i-th sample where the weights are the influences that all the other random variables have over the k-th one, and as such it can be seen as a "how much j is influenced by the other variables in the sample $i$"
+* *middle*: $\sum_{i=1}^n \left( \mathbb{X}[i,j] - \text{inner}\right )^2$ where for each of the i-th observation of the j-th random variable, we subtract the sum obtained in the inner that is a scalar, then summing all these values. We are subtracting the value of the j-th random variable in the sample i with the value computed above, so we can interpret it as 'how much j is distant from the value that should have accordingly with the other variables', then we compute the square of this difference. It can be interpreted as the euclidean distance from the vector of the n samples of j and the vector of the N values that j should assume given the other r.vs.
 * *outer*: $\sum_{j=1}^p \frac{\text{middle}}{2\sigma^2} + \frac{n}{2}ln\sigma^2$ We sums up the value obtained from all the $p$ random variables multiplied and summed with constants that are dependent from $\sigma^2$
 
 Let's see it in code:
@@ -186,6 +186,8 @@ log.LRT = function(X,D, links=T, mu,alpha){
 
 ```
 
+## PART 3
+
 ### Testing the functions
 Since we have implemented the computation of these ratios we can now test whether a sample comes from a distribution that has a specific set of linkages (or directed pathway) and when it hasn't it. In order to test our implementation we've built two functions, one for the linkages problem and one for the path. In both cases we built a linkages matrix $D$ and we create an adjacency matrix $\mathbb{A}$ that is built in function of a parameter $h0$ that indicates if we want that $\mathbb{A} \in H_0$ or not. It also considers the value of $\alpha$ in order to execute the test. As anticipated we're working on the logarithmic version of $U_n$ and $W_n$ so we'll check whether they are lower than $-log(\alpha)$. We sums up the times that we reject the null hypothesis and if we pass h0=True we'll check the percentage of False discoveries, which is expected to be around the value of $alpha$ (actually it should be lower than it, but since it's a new and experimental way to make these kind of tests, it's acceptable if we don't achieve perfect results.). We can also check the percentage of true negatives passing h0=False.
 
@@ -265,15 +267,11 @@ test_link = function(m=1e3, alpha=.05, h0=T){
 }
 ```
 
+Now let's check the size $\alpha$ and the power $1-\beta$ of our procedure.
 
-## PART 3
+Starting from the size and noticing that the power is the proportion of rejections we get by applying our test on M dataset generated from a model *compatible* with H0,  we implemented a simulation, which results are 0.092 for Un and 0.103 for Wn respectively.
 
-Now let's check the size $\alpha$  and the power $ 1- \beta $ of our procedure.
-
-Let's check the size and the power in the case of linkages-type test.
-
-Starting from the size and noticing that the power is the proportion of rejections we get by applying our test on M dataset generated from a model *compatible* with H0,  we implemented the following simulation:
-```{r}
+```{r, echo=FALSE}
 ### Parameters
 set.seed(2018)
 p <- 10
@@ -310,13 +308,11 @@ for(i in 1:M) {
 }
 
 cat('alpha is equal to for U ', contU/M,'alpha is equal to for W',contW/M)
-
-# 0.092 and 0.103
 ```
-Our results are 0.092 for Un and 0.103 for Wn respectively.
 
-Noticing that the power is the proportion of rejections we get by applying our test on M dataset generated from a model *NOT compatible* with H0,  we implemented the following simulation:
-```{r}
+
+Noticing that the power is the proportion of rejections we get by applying our test on M dataset generated from a model *NOT compatible* with H0,  we implemented another simulation that produced as results 0.969 for Un and 0.991 for Wn respectively.
+```{r, echo =FALSE}
 #Beta= the probability of failing to reject the null hypothesis when the null 
 # hypothesis is false
 p=10
@@ -326,6 +322,9 @@ sparsity=2/p
 D <- matrix(0, p, p)
 D[2:p,1]=1
 D[3:p,2]=1
+D[2,8] =1
+D[5,6]=1
+D[8,9]=1
 
 ### Adjacency Matrix >> Hub
 # All connected to 1, NO EDGE between p-2 >> **NOT COMPATIBLE** with H0
@@ -339,6 +338,7 @@ A[8,9]=1
 A[2:p,1]=1
 A[3:p,2]=1
 
+
 # SIMULATION
 contU=0
 contW=0
@@ -348,7 +348,7 @@ U_n <- rep(NA, M)
 W_n <- rep(NA, M)
 for(i in 1:M) {
   X   <- matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A) )
-  temp=log.LRT(X,D, links=T,mu=1.2,alpha=alpha)
+  temp=log.LRT(X,D, links=T,mu=1.2, alpha=alpha)
   U_n[i]=temp$U_n
   W_n[i]=temp$W_n
   
@@ -357,95 +357,9 @@ for(i in 1:M) {
 }
 
 cat('1-beta is equal to for U: ', contU/M,'   ,1-beta is equal to for W:',contW/M)
-#1-beta is equal to for U:  0.969    ,1-beta is equal to for W: 0.991
 ```
-that produce as results 0.969 for Un and 0.991 for Wn respectively.
- 
-Let's continue checking the size and the power for pathway-type test.
-```{r}
-p = 10
-n = 100
-sparsity = 2/p
 
-# Building the linkages set
-D.pathway = matrix(0, p,p)
-D.pathway[3, 4]=1
-D.pathway[4, 5]=1
-D.pathway[5, 6]=1
-D.pathway[6, 7]=1
-# Building A accordingly to h0
-A.pathway.hidden=matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
-A.pathway.hidden[3,4]=1
-A.pathway.hidden[4,5]=0
-A.pathway.hidden[5,6]=0
-A.pathway.hidden[6,7]=0
-
-out_U = 0
-out_W = 0
-m=1000
-
-for(i in 1:m){
-  set.seed(2018)
-  X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.pathway.hidden) )
-  LRT = log.LRT(X, D.pathway, links=F,mu=1.2,alpha=0.05)
-  if(LRT$links)
-    cat('ERRORE, chiamata LRT con links=', links,'\n')
-  out_U = out_U+(LRT$U_n>-log(alpha))
-  out_W = out_W+(LRT$W_n>-log(alpha))
-}
-
-cat("U_n =", out_U/m, "   W_n = ",out_W/m)
-#0 and 0
-```
-We surprisingly ended up with a size equal to 0 for each test.
-
-At the end, let's find the power of pathway-type test
-```{r}
-alpha=0.05
-p = 10
-n= 100
-sparsity = 2/p
-
-D.pathway = matrix(0, p,p)
-D.pathway[3, 4]=1
-D.pathway[4, 5]=1
-D.pathway[5, 6]=1
-
-# Building A  NOT accordingly to h0
-A.pathway.hidden=matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
-A.pathway.hidden[3,4]=1
-A.pathway.hidden[4,5]=1
-A.pathway.hidden[5,6]=1
-
-
-out_U = 0
-out_W = 0
-m=1000
-
-for(i in 1:m){
-  set.seed(2018)
-  X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.pathway.hidden) )
-  LRT = log.LRT(X, D.pathway, links=F,mu=1.2,alpha=alpha)
-  if(LRT$links)
-    cat('ERRORE, chiamata LRT con links=', links,'\n')
-  out_U = out_U+(LRT$U_n>-log(alpha))
-  out_W = out_W+(LRT$W_n>-log(alpha))
-}
-
-cat("U_n =", out_U/m, "   W_n = ",out_W/m)
-#1 e 1
-```
-Also in this case, we reached amazing power level equal to 1 for each test.
-
-Riassuming with a table, we have that:
-
-type            Statistic         level           power
---------   --------------   ---------------- ----------------
-linkage         Un               0.092           0.969
-linkage         Wn               0.103           0.991
-pathway         Un                0                1
-pathway         Wn                0                1
----------  --------------   ---------------- ----------------
+Please notice that we decided to hide the simulations' code and chose to only report the results, but you can still check it in the markdown file
 
 ## PART 4
 
@@ -496,7 +410,7 @@ This seems a good result starting from our data: in fact, they graphically appea
 
 ### CONNECTION 1 PIP2->PKC # pareggio
 
- We fixed a level alpha=0.05 so that we have $log(\frac{1}{\alpha})\simeq2.99$.
+ We fixed a level alpha=0.05 so that we have $log(\frac{1}{\alpha})\simeq1.30$.
  The following table summarizes our results.
 
 k           pvalue_MLE_dag    log(Un)               log(Wn)
@@ -640,6 +554,12 @@ This is an interesting simulation: our statistics log(Un) and log(Wn) had a stab
 ### DOMANDE
 
 
-Regarding adjusting for multiplicity, we feel it could be a sensible choice in our case: while testing our pathway-type hypothesis, we are dealing with the intersection of different events, and, if we want to check for a path between the element 1, 2 and 3, we need to check if there's a link between 1 and 2, and then between 2 and 3. This means that for every single link we are searching has an alpha level of false rejection risk associated to it, and adjusting for multiplicity (via Bonferroni's method or others) could prove to be useful in avoiding a pretty high risk of false rejection, since as we know the probability of a Type I error in multiple tests is $P= 1-(1-\alpha)^{k}$, where alpha is our significance level and k is the number of tests we are performing. 
+Regarding adjusting for multiplicity, we feel it could be a sensible choice in our case: while testing our pathway-type hypothesis, we are dealing with the intersection of different events, and, if we want to check for a path between the element 1, 2 and 3, we need to check if there's a link between 1 and 2, and then between 2 and 3. This means that for every single link we are searching for, there's an alpha level of false rejection risk associated to it, and adjusting for multiplicity (via Bonferroni's correction or others) could prove to be useful in avoiding a pretty high risk of false rejection, since as we know the probability of a Type I error in a multiple testing scenario is $ P = 1 - (1-\alpha)^k $, where alpha is our significance level and k is the number of tests we are performing. 
 Adjusting for multiplicity could also prove to be useful in the linkage case: while we aren't performing multiple test in this homework, testing our linkages one-by-one, one could carry out their analysis on a set F, in which case adjusting for multiplicity could prove to be useful, if not downright needed.
+
+For what concerns causal relations in the context of this application, we can see how it is possible to activate or inhibit specific phospho-proteins and phospho-lipids by using certain reagents. For example, in the DAG reported down here below, taken from the article "Causal Protein-Signaling Networks Derived from Multiparameter Single-Cell Data", by Karen Sachs et al., we can reflect on the role of PKC:
+
+![grafico](data/grafico_articolo.png)
+
+In fact, we can utilize two different reagents to activate or inhibit PKC, which the article tells us are respectively "PMA" and "G06976". If we were to activate or inhibit our node PKC, we could then study the behavior of the other elements connected to it. 
 
